--- a/templates/nav.html
+++ b/templates/nav.html
@@ -63,7 +63,7 @@
                 <a href="#" class="text-gray-700 hover:text-blue-600 text-sm font-medium">Publikacje</a>
                 <a href="{% url 'friends_list' %}"
                    class="text-gray-700 hover:text-blue-600 text-sm font-medium">Znajomi</a>
-                <a href="{% url 'followed_articles' %}" class="text-gray-700 hover:text-blue-600 text-sm font-medium">Polubione
+                <a href="{% url 'followed_articles' %}" class="text-gray-700 hover:text-blue-600 text-sm font-medium">Obserwowane
                     artykuły</a>
 
                 <!-- Przycisk do wyszukiwania -->
