Dostosowanie sidebaru: dodano wyświetlanie proponowanych znajomych (max 5) z avatarami i nickiem, ukrywanie sekcji na stronach friends_list, my_articles

--- a/templates/my_articles.html
+++ b/templates/my_articles.html
@@ -154,5 +154,7 @@
 {% endblock %}
 
 {% block sidebar %}
-    {% include "common/_sidebar.html" %}
+    <!-- Sidebar -->
+                    {% include "common/_sidebar.html" %}
+
 {% endblock %}
